objects/ASI_eForm_Home_Appliance__c.object
<CustomObject>
    <description>Home Appliance Request</description>
    <fields>
        <fullName>ASI_eForm_Company_Subsidy_Price__c</fullName>
        <formula>IF( ASI_eForm_Total_Price__c  &gt; 1000000,  1000000, ASI_eForm_Total_Price__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Purchasing Limit: 1ML KRW</inlineHelpText>
        <label>Company Subsidized Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Company__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Company_Name_MDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Department__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_MDM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_ID__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Name__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c +&apos; &apos;+ ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Home Appliance Requests</relationshipLabel>
        <relationshipName>Home_Appliance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Title__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Price__c</fullName>
        <label>Total Amount Claimed by Employee</label>
        <summarizedField>ASI_eForm_HA_Detail__c.ASI_eForm_Price__c</summarizedField>
        <summaryForeignKey>ASI_eForm_HA_Detail__c.ASI_eForm_Home_Appliance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Home Appliance Request</label>
    <listViews>
        <fullName>ASI_eHR_KOR_HA_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Reason_for_Request__c</columns>
        <columns>ASI_eForm_Company_Subsidy_Price__c</columns>
        <columns>ASI_eForm_Total_Price__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Home_Appliance__c.ASI_eForm_KR_Home_Appliance</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>eHR_KOR_HA_Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_HA_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Reason_for_Request__c</columns>
        <columns>ASI_eForm_Company_Subsidy_Price__c</columns>
        <columns>ASI_eForm_Total_Price__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Home_Appliance__c.ASI_eForm_KR_Home_Appliance</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>eHR_KOR_HA_Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_HA_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Reason_for_Request__c</columns>
        <columns>ASI_eForm_Company_Subsidy_Price__c</columns>
        <columns>ASI_eForm_Total_Price__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Home_Appliance__c.ASI_eForm_KR_Home_Appliance</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>eHR_KOR_HA_Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_HA_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Reason_for_Request__c</columns>
        <columns>ASI_eForm_Company_Subsidy_Price__c</columns>
        <columns>ASI_eForm_Total_Price__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Home_Appliance__c.ASI_eForm_KR_Home_Appliance</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>eHR_KOR_HA_Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Reason_for_Request__c</columns>
        <columns>ASI_eForm_Company_Subsidy_Price__c</columns>
        <columns>ASI_eForm_Total_Price__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HA-{000000}</displayFormat>
        <label>Home Appliance Request Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Appliance Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Home_Appliance</fullName>
        <active>true</active>
        <description>Home Appliance Request</description>
        <label>KR Home Appliance Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>